--- a/src/components/News.css
+++ b/src/components/News.css
@@ -1,11 +1,11 @@
 .news_container {
     width: 100%;
     height: 100vh;
-    /* display: flex; */
-    /* flex-wrap: wrap; */
+    display: flex;
+    flex-wrap: wrap;
     overflow-x: hidden;
-    /* align-items: center; */
-    /* justify-content: space-around; */
+    align-items: center;
+    justify-content: space-around;
 }
 .MuiListItemIcon-root {
     min-width: 35px !important;
