--- a/src/components/News.css
+++ b/src/components/News.css
@@ -10,3 +10,9 @@
 .MuiListItemIcon-root {
     min-width: 35px !important;
 }
+.MuiTypography-h5{
+    font: size 15px !important;
+}
+.titleText{
+    font-size: 15px !important;
+}
